@startuml Parser_ClassDiagram
hide circle
skinparam classAttributeIconSize 0

class Parser {
  + parseCommand(String): Command
  - createCommandFromInput(String): Command
  - createAddExpenseCommand(String): AddExpenseCommand
}

interface Command {
  <<interface>>
  + execute()
  + shouldExit()
}

Command <|.. AddExpenseCommand

Parser ..> Command : creates >

note right of Command
  **Design Notes**:
  1. All commands implement the same Command interface
  2. Other commands are omitted for brevity
end note
@enduml